--- a/about.html
+++ b/about.html
@@ -205,7 +205,7 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="box">
+                        <div class="box-stats">
                             <h3 class="poppins-font position-relative">4/5</h3>
                             <p class="open-sans-font m-0 position-relative text-uppercase">Star <span class="d-block">Rating</span></p>
                         </div>
