--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@
                             <li> <span class="title">Phone :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">+8801309173120</span> </li>
                             <li> <span class="title">Email :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">sfbd2017@gmail.com</span> </li>
                             <li> <span class="title">Facebook :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Abdullah Al Noman</span> </li>
-                            <li> <span class="title">Language :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Bangla, English</span> </li>
+                            <li> <span class="title">Language :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Bangla, English, Hindi, Urdu</span> </li>
                         </ul>
                     </div>
                     <div class="col-12 mt-3">
