--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
             <a href="blog.html">
                 <h2>Blog</h2>
             </a>
+
+            </li>
+        <li class="icon-box">
+            <i class="fa fa-cloud"></i>
+            <a href="weather.html">
+                <h2>Weather</h2>
+            </a>
+
         </li>
     </ul>
     <!-- Fixed Navigation Ends -->
