--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 
 <head>
+
+    <link rel="shortcut icon" type="imgge/png" href="img/favicon.png">
     <meta charset="utf-8">
     <title>Home -  Abdullah Al Noman</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,6 +20,7 @@
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/fm.revealator.jquery.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
     <!-- CSS Skin File -->
     <link href="css/skins/yellow.css" rel="stylesheet">
 
