--- a/post4.html
+++ b/post4.html
@@ -3,8 +3,9 @@
 
 
 <head>
+    <link rel="shortcut icon" type="imgge/png" href="img/favicon.png">
     <meta charset="utf-8">
-    <title>Blog - Tajbir Prottoy</title>
+    <title>Blog - Abdullah Al Noman</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Template Google Fonts -->
