--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
 
 <head>
+    <link rel="shortcut icon" type="imgge/png" href="img/favicon.png">
     <meta charset="utf-8">
     <title>Contact - Abdullah Al Noman</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
