--- a/weather.html
+++ b/weather.html
@@ -56,6 +56,7 @@
                 <li><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
                 <li><a href="blog.html"><i class="fa fa-comments"></i><span>Blog</span></a></li>
+                <li><a href="weather.html"><i class="fa fa-cloud"></i><span>Weather</span></a></li>
             </ul>
         </div>
     </nav>
